--- a/package.json
+++ b/package.json
@@ -31,11 +31,12 @@
     "grunt-contrib-clean": "~0.4.0",
     "grunt-contrib-nodeunit": "~0.2.0",
     "grunt": "~0.4.2",
-    "js-yaml": "latest",
     "grunt-contrib-copy": "~0.5.0"
   },
   "peerDependencies": {
-    "grunt": "~0.4.2"
+    "grunt": "latest",
+    "js-yaml": "latest"
+
   },
   "keywords": [
     "gruntplugin"
