--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "grunt-contrib-copy": "~0.5.0"
   },
   "peerDependencies": {
-    "grunt": "latest",
+    "grunt": "~0.4.0",
     "js-yaml": "latest"
 
   },
